--- a/Styles/MasterPage.css
+++ b/Styles/MasterPage.css
@@ -25,6 +25,7 @@ a, b, body, br, button, col, dd, div, dl, dt, em, fieldset, form, frame, framese
     zoom: 1;
     font-size: 16px;
     background-color: #fff;
+    box-shadow:2px 2px 10px #C38DD4;
 }
 
 .logo {
@@ -50,6 +51,16 @@ a, b, body, br, button, col, dd, div, dl, dt, em, fieldset, form, frame, framese
     float: right;
     display: inline;
     line-height: 75px;
+}
+
+.map {
+    width: 1260px;
+    height: 40px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    padding-top: 10px;
 }
 
 .footer {
