--- a/Styles/MasterPage.css
+++ b/Styles/MasterPage.css
@@ -3,13 +3,9 @@
     min-width: 1260px;
 }
 
-body {
-    font: 12px/1.5 simsun,arial,"microsoft yahei";
-    background-color: #fff;
-}
-
-a, body {
-    color: #333;
+.background {
+    background:#fff url(../Images/background.jpg) no-repeat left top;
+    background-size:100%;
 }
 
 a, b, body, br, button, col, dd, div, dl, dt, em, fieldset, form, frame, frameset, h1, h2, h3, h4, h5, h6, head, html, i, iframe, img, input, label, legend, li, map, ol, option, p, select, span, table, tbody, td, textarea, tfoot, th, thead, tr, ul {
@@ -26,6 +22,8 @@ a, b, body, br, button, col, dd, div, dl, dt, em, fieldset, form, frame, framese
     font-size: 16px;
     background-color: #fff;
     box-shadow:2px 2px 10px #C38DD4;
+    border-radius:20px;
+
 }
 
 .logo {
